--- a/variables.rc
+++ b/variables.rc
@@ -1,4 +1,14 @@
 MENU_OPTS=(1 "Pack"
-         2 "Unpack"
-         3 "Exit"
-)
+           2 "Unpack"
+           3 "Exit")
+
+EXT_OPTS=(1 "zip"
+         2 "rar"
+         3 "tar"
+         4 "gz"
+         5 "bz2")
+
+FILE_LIST=()
+DIR_NAME=""
+EXT="zip"
+EXT_CHOICES=1
